crates/ppvm-stim/tests/snapshots/parser_snapshots__annotation_with_args.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Annotation {
            kind: ObservableInclude,
            args: [
                0.0,
            ],
            targets: [],
            line: 1,
        },
    ],
}
