crates/ppvm-stim/tests/snapshots/parser_snapshots__annotation_with_rec_target.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Annotation {
            kind: Detector,
            args: [],
            targets: [],
            line: 1,
        },
    ],
}
