crates/ppvm-stim/tests/snapshots/parser_snapshots__args_only_noise.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Noise {
            name: Depolarize1,
            tags: [],
            args: [
                0.5,
            ],
            targets: [
                0,
            ],
            line: 1,
        },
    ],
}
