crates/ppvm-stim/tests/snapshots/parser_snapshots__bare_gate.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Gate {
            name: H,
            tags: [],
            args: [],
            targets: [
                0,
            ],
            line: 1,
        },
    ],
}
