crates/ppvm-stim/tests/snapshots/parser_snapshots__empty_repeat_body.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Repeat {
            count: 5,
            body: [],
            line: 1,
        },
    ],
}
