crates/ppvm-stim/tests/snapshots/parser_snapshots__multi_tag.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Gate {
            name: S,
            tags: [
                Tag {
                    name: "T",
                    params: [],
                },
                Tag {
                    name: "debug",
                    params: [],
                },
            ],
            args: [],
            targets: [
                0,
            ],
            line: 1,
        },
    ],
}
