crates/ppvm-stim/tests/snapshots/parser_snapshots__multi_target_measurement_with_noise.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Measure {
            name: M,
            tags: [],
            args: [
                0.001,
            ],
            targets: [
                0,
                1,
                2,
            ],
            line: 1,
        },
    ],
}
