crates/ppvm-stim/tests/snapshots/parser_snapshots__nested_repeat.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Repeat {
            count: 2,
            body: [
                Repeat {
                    count: 3,
                    body: [
                        Gate {
                            name: X,
                            tags: [],
                            args: [],
                            targets: [
                                0,
                            ],
                            line: 3,
                        },
                    ],
                    line: 2,
                },
            ],
            line: 1,
        },
    ],
}
