crates/ppvm-stim/tests/snapshots/parser_snapshots__single_target_measurement.snap
---
source: crates/ppvm-stim/tests/parser_snapshots.rs
expression: prog
---
Program {
    instructions: [
        Measure {
            name: M,
            tags: [],
            args: [],
            targets: [
                0,
            ],
            line: 1,
        },
    ],
}
